--- a/HT.csproj
+++ b/HT.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Tausta.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
